manifest/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:        
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: http.host
              value: 0.0.0.0
            - name: network.host
              value: 0.0.0.0
            - name: transport.host
              value: localhost
          image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.5
          name: elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources:
            limits:
              memory: "1073741824"
      restartPolicy: Always
status: {}
