manifest/graylog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: graylog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: graylog 
  template:
    metadata:     
      labels:        
        app: graylog
    spec:
      containers:
        - env:
            - name: GRAYLOG_HTTP_EXTERNAL_URI
              value: http://192.168.1.15:9000/
            - name: GRAYLOG_HTTP_PUBLISH_URI
              value: http://192.168.1.15:9000/
            - name: GRAYLOG_PASSWORD_SECRET
              value: somepasswordpepper
            - name: GRAYLOG_ROOT_PASSWORD_SHA2
              value: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
          image: graylog/graylog:4.1
          name: graylog
          ports:
            - containerPort: 9000
            - containerPort: 1514
            - containerPort: 1514
              protocol: UDP
            - containerPort: 12201
            - containerPort: 12201
              protocol: UDP
            - containerPort: 5044
          resources: {}
      restartPolicy: Always
status: {}
