manifest/graylog-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-expose
  labels:
    name: graylog
spec:
  type: NodePort
  ports:
    - port: 9000
      nodePort: 30900      
  selector:
    app: graylog
