manifest/graylog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null  
  name: graylog-service
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "1514"
      port: 1514
      targetPort: 1514
    - name: 1514-udp
      port: 1514
      protocol: UDP
      targetPort: 1514
    - name: "12201"
      port: 12201
      targetPort: 12201
    - name: 12201-udp
      port: 12201
      protocol: UDP
      targetPort: 12201
    - name: "5044"
      port: 5044
      targetPort: 5044
  selector:
    app: graylog
status:
  loadBalancer: {}
