manifest/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress 
  #annotations:
   # kubernetes.io/ingress.class: "nginx"
  #annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
  
spec: 
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: graylog-service
              port:
                number: 9000
