manifest/10-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graylog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: v1.example.com 
    http:
      paths:
      - backend:
          serviceName: graylog-service
          servicePort: 9000
